[package]
name = "bare"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] 

[dependencies]
sanity = { git = "https://github.com/Ozodimgba/sanity.git" }
pinocchio = "0.8.4"

[dev-dependencies]
litesvm = "0.6"
solana-keypair = "2.2"
solana-instruction = "2.2"
solana-signer = "2.2"
solana-message = "2.2"
solana-transaction = "2.2"
solana-pubkey = "2.2"
solana-system-interface = "1.0.0"
